@@ -1,7 +1,5 @@
 package cc.rits.membership.console.iam.infrastructure.api.controller.front;
 
-import java.util.stream.Collectors;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.validation.annotation.Validated;
@@ -49,7 +47,7 @@ public class ClientRestController {
     public ClientsResponse getClients() {
         final var clients = this.getClientsUseCase.handle().stream() //
             .map(ClientResponse::new) //
-            .collect(Collectors.toList());
+            .toList();
         return new ClientsResponse(clients);
     }
 
