@@ -1,7 +1,5 @@
 package cc.rits.membership.console.iam.infrastructure.api.controller.front;
 
-import java.util.stream.Collectors;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.validation.annotation.Validated;
@@ -46,7 +44,7 @@ public class UserGroupRestController {
     public UserGroupsResponse getUserGroups() {
         final var userGroups = this.getUserGroupsUseCase.handle().stream() //
             .map(UserGroupResponse::new) //
-            .collect(Collectors.toList());
+            .toList();
         return new UserGroupsResponse(userGroups);
     }
 
