@@ -1,7 +1,5 @@
 package cc.rits.membership.console.iam.infrastructure.api.controller.oauth2;
 
-import java.util.stream.Collectors;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.validation.annotation.Validated;
@@ -42,7 +40,7 @@ public class UserRestController {
     ) {
         final var users = this.getUsersUseCase.handle(loginClient).stream() //
             .map(UserResponse::new) //
-            .collect(Collectors.toList());
+            .toList();
         return new UsersResponse(users);
     }
 
